@@ -183,6 +183,8 @@ public:
 	int seeking2; // By default 1m
 	int seeking3; // By default 10m
 	int seeking4; // For mouse wheel, by default 30s
+	
+	bool update_while_seeking;
 
 	// Logs
 	bool log_mplayer;
